--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title> TubicasBoys </title>
         <meta charset="utf-8">
         <meta name="author" content="Pedro">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Cabaré">
         <meta name="keywords" content="html5, tecnologia">
         <link rel="preconnect" href="https://fonts.googleapis.com">
